# M5StickCPlus2_Remote_For_DJI_Osmo

./: .gitignore  AI_RULES.md  README.md  SPEC.md  platformio.ini  sdkconfig  sdkconfig.ci.esp32c2_xtal26m  sdkconfig.ci.name  sdkconfig.m5stickc_plus11  sdkconfig.m5stickc_plus2
.cursor/: boot_log2.txt  boot_log_latest.txt  boot_log_new.txt  context.md  contract.md  crash2.txt  crash_log.txt  fresh_boot.txt  phy_fix_log.txt
.cursor/prompts/: codegen.md
.cursor/rules/: m5stickc_plus_cursor_rule.md  project-specification.md  project.mdc
ble/: ble.c  ble.h
data/: data.c
gps/: gps.c  gps.h
logic/: command_logic.c  command_logic.h  connect_logic.c  connect_logic.h  light_logic.c  motion_logic.c  motion_logic.h
main/: CMakeLists.txt  app_main.c  icons.h  logo_bitmap.h  m5stickc_plus11_hal.c  m5stickc_plus11_hal.h  m5stickc_plus2_hal.c  m5stickc_plus2_hal.h  ui.c  ui.h
protocol/: dji_protocol_data_descriptors.c  dji_protocol_data_descriptors.h  dji_protocol_data_structures.h
scripts/: build_and_upload_plus11.sh  capture_logs.sh  capture_serial.py  generate_plus11_hal.py
